test/fail/SizedDataWrongPol.ma
sized data Nat : -Size -> Set {}
